# scws

./: .gitignore  API.md  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  acprep  b.out  charset.c  charset.h  configure.ac  crc32.h  dict-gen.xdb  lock.c  pool.c  pool.h  rule.c  rule.h  scws-dict-chs-utf8.tar.bz2  scws.c  xdict.h  xtree.c  xtree.h
cli/: Makefile.am  gen_dict.c  scws_cmd.c
dev/dict/: baidu_getnum.php  bdb.class2.php  big5_list.txt  calc_text.php  char2.txt  dba.class.php  draw_hdb.php  gen_gbk_chars.php  hdb.class.php  mk_dbm.php  mk_py_dict.php  readme.txt  sync_hdb.php  test_query.php  w.txt  w5.txt  xdb.class.php  z.txt
dev/dict/getpy/: my_Getpy.class.php
dev/eval/: dev-ref.gb  dev.gb  segmentationPrec.pl
dev/php4/pscws23/: demo.php  dict.class.php  pscws2.class.php  pscws3.class.php  readme.txt
dev/php4/pscws23/_dictool/: Readme.txt  dict.txt  gen_sqlite.php  mk_cdb.php  mk_txt.php  mk_xdb.php  xdb.class.php
dev/php4/pscws4/: pscws4.class.php  readme.txt  test.php  xdb_r.class.php
dev/unused/: mio.c  mio.h  mio_poll.h  mio_select.h  xinaddr.c  xinaddr.h  xlog.c  xlog.h
etc/: Makefile.am  rules.ini  rules.utf8.ini  rules_cht.utf8.ini
libscws/: Makefile.am  config_win32.h  crc32.c  darray.c  darray.h  lock.c  lock.h  rule.c  rule.h  scws.c  scws.h  version.h.in  xdb.c  xdb.h  xdict.c  xdict.h  xtree.c
phpext/: CREDITS  README.md  config.m4  php_scws.c  php_scws.h  scws.php  scws.stub.php  scws_arginfo.h  scws_test.php
phpext/win32/: README.txt
web/: about.php  api.php  demo.php  docs.php  download.php  footer.inc.php  header.inc.php  index.php  support.php
web/demo/: get_tfidf.php  get_tfidf.phps  sample.txt  sample.utf8.txt  sample_cht.utf8.txt  v4.php  v48.cht.php  v48.php
web/demo/pscws23/: demo.php  dict.class.php  pscws2.class.php  pscws3.class.php  readme.txt  xdb_r.class.php
web/demo/pscws4/: pscws4.class.php  readme.txt  test.php  xdb_r.class.php
web/demo/pscws4/etc/: rules.ini  rules.utf8.ini  rules_cht.utf8.ini
win32/: libscws.dsp  libscws.vcproj  readme.txt  scws.dsp  scws.dsw  scws.sln  scws.vcproj
